fix productslist  alignments

--- a/src/components/Products/ProductItem/ProductItem.scss
+++ b/src/components/Products/ProductItem/ProductItem.scss
@@ -5,7 +5,7 @@
   @extend .box-basic;
   box-sizing: border-box;
   padding: 10px 20px;
-  margin: 10px 1%;
+  margin: 10px 0;
 
   .header{
     display: block;
@@ -28,7 +28,7 @@
   }
 
   @include respond-to('medium') {
-    width: 300px;
+    width: 340px;
 
     .image {
       width: 80%;
