--- a/src/components/Products/ProductList/ProductList.scss
+++ b/src/components/Products/ProductList/ProductList.scss
@@ -6,5 +6,6 @@
   @include respond-to('medium') {
     flex-direction: row;
     flex-wrap: wrap;
+    justify-content: space-between;
   }
 }
